# pygame_template

./: .gitignore  README.md  pygame_template.spec  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: black.yml  tests.yml
config/: constants.py  settings.py
scripts/: install.ps1  install.sh
src/: main.py
src/core/: engine.py  resource_manager.py  scene_manager.py
src/objects/: ball.py  entity.py  paddle.py
src/scenes/: credits_scene.py  game_over_scene.py  menu_scene.py  options_scene.py  pause_scene.py  pong_scene.py  scene.py
src/ui/: __init__.py  button.py  dropdown.py  element.py  label.py  menu.py  slider.py  spacer.py  toggle_button.py
src/utils/: logger.py  performance.py
tests/: conftest.py
tests/test_core/: test_engine.py  test_resource_manager.py  test_scene_manager.py
tests/test_utils/: test_logger.py  test_performance.py
